WIP: Implementing social login using Spring OAuth2
* application-auth.yml 파일 gitignore에 추가
* application.yml 파일에서 auth profile include 하도록 설정
* exposed 쿼리 로그 임시 추가
* CustomOAuth2UserService 작성 중

--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,6 @@ gradle-app.setting
 # JDT-specific (Eclipse Java Development Tools)
 
 # End of https://www.toptal.com/developers/gitignore/api/eclipse,visualstudiocode,intellij+all,java,maven,gradle,kotlin
+
+### Application ###
+application-auth.yml
