Include application-auth.yml in main configuration file
* auth profile을 로드하는 대신 기존 설정 파일에 application-auth.yml 파일을 include 하도록 설정 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 spring:
-  profiles:
-    include:
-      - auth
+  config:
+    import: classpath:application-auth.yml
   datasource:
     url: jdbc:mysql://localhost:3306/service?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
