--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-  output:
-    ansi:
-      enabled: always
+  web:
+    resources:
+      add-mappings: false
   exposed:
     show-sql: true
     generate-ddl: true
