--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -17,7 +17,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Include auth key, file
+      - name: Docker login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Docker image build and push
         run: |
           cat << EOF >> ${{ env.RESOURCES_CLASSPATH }}/${{ env.APPLICATION_AUTH_FILE_NAME }}
           ${{ secrets.APPLICATION_AUTH_YML }}
@@ -26,15 +31,7 @@ jobs:
           cat << EOF >> ${{ env.APPLE_AUTH_KEY_DIR }}/${{ env.APPLE_AUTH_KEY_FILE_NAME }}
           ${{ secrets.APPLE_AUTH_KEY }}
           EOF
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Docker login
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Docker image build and push
-        run: |
+          chmod +x gradlew
           docker build --build-arg DATE_FOR_DISABLE_CACHE=$(date +%s) --tag ${{ secrets.DOCKER_USER }}/${{ secrets.APPLICATION_NAME }} .
           docker push ${{ secrets.DOCKER_USER }}/${{ secrets.APPLICATION_NAME }}
       - name: Deploy to server
