Debug build-and-deploy.yml
* mkdir command에 -p 옵션 추가
* 디버그용 ls command 추가

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,7 +27,8 @@ jobs:
           cat << EOF >> ${{ env.RESOURCES_CLASSPATH }}/${{ env.APPLICATION_AUTH_FILE_NAME }}
           ${{ secrets.APPLICATION_AUTH_YML }}
           EOF
-          mkdir ${{ env.APPLE_AUTH_KEY_DIR }}
+          ls ${{ env.RESOURCES_CLASSPATH }}
+          mkdir -p ${{ env.APPLE_AUTH_KEY_DIR }}
           cat << EOF >> ${{ env.APPLE_AUTH_KEY_DIR }}/${{ env.APPLE_AUTH_KEY_FILE_NAME }}
           ${{ secrets.APPLE_AUTH_KEY }}
           EOF
