--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -47,5 +47,6 @@ jobs:
             sudo docker run -d --rm \
               --name ${{ secrets.APPLICATION_NAME }} \
               -p 80:8080 \
+              -v /tmp/log/slothhell:/tmp/log/shothhell
               -e SPRING_PROFILES_ACTIVE=dev \
               ${{ secrets.DOCKER_USER }}/${{ secrets.APPLICATION_NAME }}
