Switch to integrating Swagger with Spring REST Docs for API documentation
* Spring REST Docs를 Swagger와 통합한 방식으로 변경
* 관련된 Swagger static resource 추가
* 관련된 security, web config 수정
* 관련된 test code 수정

--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,4 @@ gradle-app.setting
 ### Application ###
 application-auth.yml
 src/**/resources/static/docs/**
+src/main/resources/static/swagger-ui/openapi3.yml
